add index.html file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     nav {
         background: rgb(239, 80, 41);
         margin: 0 auto;
+        margin-bottom: 20px;
         display: flex;
         padding: 10px;
     }
@@ -45,7 +46,7 @@
 
     /* main container area beneath menu */
     main {
-        background: rgb(245, 238, 219);
+        background: rgb(201, 150, 12);
         display: flex;
     }
     .sidebar {
@@ -87,12 +88,12 @@
 
         <main>
               <!-- Sidebar section -->
-    <div>
-      <img src="https://www.history.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTU3ODc4NjAyOTkyNTI2NjY1/ask-history-who-invented-baseball-2.jpg">
+    <div class="sidebar">
+      <img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgmzPVIxmSNhFEzGDqH4pd0tUixrcgNuNc9W52UesIO0mu7nTp:https://cdn4.sportngin.com/attachments/call_to_action/a854-113329062/baseball_small.jpg&usqp=CAU">
     </div>
 
     <!-- Content section -->
-    <div>
+    <div id="all-contents">
         <h2></h2>
         <p>I am a student at Centerville high school</p>
     </div>
