add index.html file

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
     
     
        <!-- All content goes here -->
-    <div> 
+    <div class="content"> 
         <nav>
             <h1>Nathans Website</h1>
-              <ul>
-        <li>
+              <ul id="nav-ul">
+        <lin class="nav-li">
           <a href="index.html"> Home </a>
         </li>
-        <li>
+        <li class="nav-li">
           <a href="portfolio.html"> Portfolio </a>
         </li>
     </ul>
@@ -97,7 +97,8 @@
         <h2></h2>
         <p>I am a student at Centerville high school</p>
     </div>
-    <div>
+    <!--Interests Section-->
+    <div id="interests">
         <div>
     <h3>Interests</h3>
     <ul>
