add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -78,10 +78,10 @@
                 if (positionX > boardWidth){
                     speed = -speed;
                 }
-                if (positionX > 0){
+                if (positionX < 0){
                     speed = -speed;
                 }
-                
+            };   
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
@@ -105,5 +105,4 @@
 		})();
 	</script>
 </body>
-</html>
-}
+</html> 
